--- a/portlets/techbook-portlet/.classpath
+++ b/portlets/techbook-portlet/.classpath
@@ -1,10 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry excluding="**/.svn/**|.svn/" kind="src" path="docroot/WEB-INF/src"/>
-	<classpathentry exported="true" kind="lib" path="/home/tibusz/dev/apache-tomcat-bundles/apache-tomcat-7.0.56/lib/servlet-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="/home/tibusz/dev/apache-tomcat-bundles/apache-tomcat-7.0.56/lib/servlet-api.jar" sourcepath="/home/tibusz/dev/third-party-libs/javax.servlet-api-3.0.1-sources.jar"/>
 	<classpathentry kind="lib" path="/home/tibusz/dev/apache-tomcat-bundles/apache-tomcat-7.0.56/lib/annotations-api.jar"/>
 	<classpathentry kind="lib" path="/home/tibusz/dev/apache-tomcat-bundles/apache-tomcat-7.0.56/lib/jasper.jar"/>
 	<classpathentry kind="lib" path="/home/tibusz/dev/apache-tomcat-bundles/apache-tomcat-7.0.56/lib/jsp-api.jar"/>
+	<classpathentry kind="lib" path="/home/tibusz/dev/apache-tomcat-bundles/apache-tomcat-7.0.56/webapps/examples/WEB-INF/lib/jstl.jar"/>
+	<classpathentry kind="lib" path="/home/tibusz/dev/apache-tomcat-bundles/apache-tomcat-7.0.56/webapps/examples/WEB-INF/lib/standard.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
