LRSUPPORT-8106 Add more source files + load properties file

--- a/trainings/maven-training-1/examples/example1/WEB-INF/web.xml
+++ b/trainings/maven-training-1/examples/example1/WEB-INF/web.xml
@@ -14,6 +14,11 @@
 		</taglib>
 	</jsp-config>
 
+	<listener>
+		<display-name>TestListener</display-name>
+		<listener-class>com.liferay.trainings.internal.maven.servlet.listener.TestServletContextListener</listener-class>
+	</listener>
+
 	<servlet>
 		<servlet-name>TestServlet</servlet-name>
 		<servlet-class>com.liferay.trainings.internal.maven.servlet.TestServlet</servlet-class>
