--- a/.gitignore
+++ b/.gitignore
@@ -42,7 +42,7 @@ _sass_cache_*.css
 /themes/*/docroot/templates
 /themes/*/docroot/WEB-INF/lib
 
-/*/*/*/*/WEB-INF/classes
+/*/*/*/*/build/*
 /*/*/*/*/*.jar
 
 /tools/*/*/*/lib
