--- a/trainings/maven-training-1/examples/example1/.classpath
+++ b/trainings/maven-training-1/examples/example1/.classpath
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry excluding="**/.svn/**|.svn/" kind="src" path="WEB-INF/src"/>
-	<classpathentry kind="lib" path="WEB-INF/lib/servlet-api.jar" sourcepath="WEB-INF/lib-src/javax.servlet-api-3.0.1-sources.jar"/>
-	<classpathentry kind="lib" path="WEB-INF/lib//jsp-api.jar" sourcepath="WEB-INF/lib-src/jsp-api-2.2-sources.jar"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-	<classpathentry kind="output" path="bin"/>
+	<classpathentry excluding="**/.svn/**|.svn/" kind="src" path="src"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
+		<attributes>
+			<attribute name="owner.project.facets" value="java"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/servlet-api.jar" sourcepath="web/WEB-INF/lib-src/javax.servlet-api-3.0.1-sources.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/jsp-api.jar" sourcepath="web/WEB-INF/lib-src/jsp-api-2.2-sources.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
+	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
+	<classpathentry kind="output" path="build/classes"/>
 </classpath>
