--- a/trainings/maven-training-1/examples/example1/src/example.properties
+++ b/trainings/maven-training-1/examples/example1/src/example.properties
@@ -1,1 +1,15 @@
-key=Maven Trainging
+# By adding this line EasyConf will check every 5 seconds (at most) if the file
+# has changed. If so it will reload its contents. Note that the actual check
+# will be done lazyly, only when a method to retrieve a property or the
+# component configuration is called. Until one of these methods is not called
+# EasyConf will not check if the file has changed (no matter how much time
+# passes). In other words this means that no extra threads are used as they
+# could cause problems in some environments.
+
+easyconf:reload-delay=5
+
+###
+###	Properties
+###
+
+maven.example=Maven Training
