LRSUPPORT-8106 Rename prop key + add support for ext properties file

--- a/trainings/maven-training-1/examples/example1/src/example.properties
+++ b/trainings/maven-training-1/examples/example1/src/example.properties
@@ -8,8 +8,16 @@
 
 easyconf:reload-delay=5
 
+##
+## Properties Override
+##
+
+include-and-override=example-ext.properties
+
+###############################################################################
+
 ###
-###	Properties
+###	Maven Example 1 properties
 ###
 
-maven.example=Maven Training
+test.key.1=Maven Training
