--- a/trainings/maven-training-1/examples/example1/src/example.properties
+++ b/trainings/maven-training-1/examples/example1/src/example.properties
@@ -20,4 +20,6 @@ include-and-override=example-ext.properties
 ###	Maven Example 1 properties
 ###
 
-test.key.1=Maven Training
+override.bean.defaults=false
+user.bean.age=1
+user.bean.name=Maven Internal Training
