--- a/trainings/maven-training-1/examples/example1/.classpath
+++ b/trainings/maven-training-1/examples/example1/.classpath
@@ -1,15 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
+
+	<!-- Project settings -->
+
 	<classpathentry excluding="**/.svn/**|.svn/" kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.7">
 		<attributes>
 			<attribute name="owner.project.facets" value="java"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/easyconf.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/jsp-api.jar" sourcepath="web/WEB-INF/lib-src/jsp-api-2.2-sources.jar"/>
-	<classpathentry kind="lib" path="web/WEB-INF/lib/servlet-api.jar" sourcepath="web/WEB-INF/lib-src/javax.servlet-api-3.0.1-sources.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="output" path="build/classes"/>
+	<classpathentry kind="output" path="build"/>
+
+	<!-- Dependencies -->
+
+	<!--
+	### Direct dependencies:
+	- easyconf 0.9.5
+	- jsp-api 2.2 (provided by the container at runtime)
+	- servlet-api 3.0.1 (provided by the container at runtime)
+	- spring-beans 4.1.3
+	- spring-core 4.1.3
+	- spring-context 4.1.3
+
+	### Transitive dependencies:
+		<<<easyconf>>>
+		- dom4j 1.6.1
+		- commons-beanutils 1.8.2
+		- commons-collections 3.2.1
+		- commons-configuration 1.6
+		- commons-digester 1.8
+		- commons-lang 2.5
+		- commons-logging 1.2
+		- xstream 1.3.1
+
+		<<<spring>>>
+		- aopalliance 1.0
+		- spring-aop 4.1.3
+		- spring-expression 4.1.3
+	-->
+
+	<classpathentry kind="lib" path="web/WEB-INF/lib/aopalliance-1.0.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-beanutils-1.8.2.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-collections-3.2.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-configuration-1.6.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-digester-1.8.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-lang-2.5.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/commons-logging-1.2.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/dom4j-1.6.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/easyconf-0.9.5.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/spring-aop-4.1.3.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/spring-beans-4.1.3.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/spring-context-4.1.3.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/spring-core-4.1.3.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/spring-expression-4.1.3.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib/xstream-1.3.1.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib-dev/jsp-api-2.2.jar" sourcepath="web/WEB-INF/lib-src/jsp-api-2.2-sources.jar"/>
+	<classpathentry kind="lib" path="web/WEB-INF/lib-dev/servlet-api-3.0.1.jar" sourcepath="web/WEB-INF/lib-src/javax.servlet-api-3.0.1-sources.jar"/>
 </classpath>
